# isometric_game_engine

./: Cargo.toml
ecs_core/: Cargo.toml
ecs_core/src/ecs/: archetype.rs  bundle.rs  component.rs  entity.rs  mod.rs  system.rs  world.rs
ecs_derive/: Cargo.toml
ecs_derive/src/: lib.rs
src/: game.rs  main.rs
src/assets/: import.rs
src/assets/tiles/grass/: tile.ron
src/game_logic/: components.rs  entity.rs  mod.rs  world.rs
src/graphics/: graphics.rs  mod.rs  tile.rs
src/graphics/texture/: atlas.rs  mod.rs  texture.rs  texture_handle.rs  texture_registry.rs
src/map/: chunk.rs  mod.rs  noise.rs  tile.rs
src/mesh/: chunk_mesh.rs  chunk_meshes.rs  entity_mesh.rs  instance_data.rs  instance_mesh.rs  mod.rs  vertex_data.rs  world_mesh.rs
src/shaders/: shader.wgsl
