[package]
name = "isometric_game_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
glam = "0.30.9"
image = "0.25.9"
noise = "0.9.0"
pollster = "0.4.0"
proc-macro2 = "1.0.104"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
walkdir = "2.5.0"
wgpu = "27.0.1"
winit = "0.30.12"
ecs_core = { version = "0.1.0", path = "ecs_core" }
